# ha_sanitized_presence

./: .gitignore  README.md  hacs.json  pyproject.toml
.github/workflows/: ci.yml  release.yml
custom_components/sanitized_presence/: __init__.py  auto_reset.py  binary_sensor.py  config_flow.py  const.py  discovery.py  helpers.py  manifest.json  recovery.py  sensor.py
custom_components/sanitized_presence/tests/: conftest.py  test_auto_reset.py  test_binary_sensor.py  test_config_flow.py  test_deadline_sensor.py  test_discovery.py  test_helpers.py  test_integration_e2e.py  test_recovery.py  test_status_sensor.py
custom_components/sanitized_presence/translations/: en.json
docs/superpowers/plans/: 2026-05-26-occupancy-gated-presence.md  2026-05-29-recovery-state-machine.md
docs/superpowers/specs/: 2026-05-26-occupancy-gated-presence-design.md  2026-05-29-recovery-state-machine-design.md
