[project]
name = "ha_sanitized_presence"
version = "0.1.0"
description = "Home Assistant integration: sanitized presence binary sensor for MTG075/MTG275 mmWave radars"
requires-python = ">=3.13"
authors = [{ name = "AlexMKX" }]
license = { text = "MIT" }

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["custom_components/sanitized_presence/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "docker_e2e: end-to-end tests requiring a containerized HA instance",
]

[tool.coverage.run]
source = ["custom_components/sanitized_presence"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 85

[tool.pylint.main]
py-version = "3.13"
load-plugins = ["pylint.extensions.docparams"]
# Allow pylint to resolve custom_components.* imports when run from repo root.
init-hook = "import sys; sys.path.insert(0, '.')"

[tool.pylint.format]
# Black formats code to 100; docstrings and Code: references may be slightly wider.
max-line-length = 125

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",      # module docstrings live in __init__.py top
    "too-few-public-methods",
    "duplicate-code",                # auto_reset.py is intentionally mirrored from door_occupancy
    "too-many-arguments",            # HA entity constructors require many params by design
    "too-many-positional-arguments", # same
    "too-many-instance-attributes",  # HA entities track substantial per-device state
]

[tool.vulture]
paths = ["custom_components/sanitized_presence"]
exclude = ["tests/"]
min_confidence = 80
